plugins/stream-debugger/testData/chain/positive/location/AssignExpression.java
import java.util.stream.IntStream;

public class Baz {
  public static void main(String[] args) {
<caret>    int res = IntStream.of(1,2).sum();
  }
}
