plugins/stream-debugger/testData/chain/negative/NoBreakpoint.java
import java.util.stream.IntStream;

public class Baz {
  public static void main(String[] args) {
    final int s = IntStream.range(1, 2).sum();
  }
}
